--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,50 +64,60 @@
           </div>
           <div class="skill"><img class="skill-img"src="https://expressjs.com/images/express-facebook-share.png" alt="">
            </div>
-          <!-- <div class="skill"><img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png" alt="">
-          </div>
-          <div class="skill"> <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png" alt="">
-          </div> -->
+
         </div>
       </div>
     </div>  
 
     <div id="projects">
+
       <div class="project">
-        <img class="project-img" src="https://images.unsplash.com/photo-1622206699823-9687bada23a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="">
-        <div class="project-text">
-          <h2>JoeyTV</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolore eligendi sint perspiciatis nam labore ipsum expedita, inventore quae? Cum ullam necessitatibus aliquam odit, saepe corrupti atque culpa dignissimos ab!</p>
+        <video width="320" height="240" controls autoplay>
+          <source src="https://res.cloudinary.com/dhxs9jryg/video/upload/v1651182522/portfolio/joeyTV_demo_n2jpar.mp4" type="video/mp4">
+        </video>
+          <div class="project-text">
+            <h2>JoeyTV</h2>
+            <p>JoeyTV is a platform for TV shows and movies that is geared to help parents 
+              determine which shows are suitable for their children to watch. Includes CRUD 
+              functionality with a review system and tagging feature for sorting shows by category.</p>
+          </div>
         </div>
-      </div>
-        <div class="project">
-          <img class="project-img" src="https://images.unsplash.com/photo-1622206699823-9687bada23a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="">
+      <div class="project">
+        <img class="project-img" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651181705/portfolio/Screenshot_2022-04-28_183432_vqwrmi.png" alt="">
           <div class="project-text">
             <h2>Book Library</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolore eligendi sint perspiciatis nam labore ipsum expedita, inventore quae? Cum ullam necessitatibus aliquam odit, saepe corrupti atque culpa dignissimos ab!</p>
+            <p>This is a library of books from a local API that is running on the json-server node module. 
+              Uses react functional components for each book in the database as a card, 
+              displaying information that is pulled from the db.json server.</p>
           </div>
         </div>
-        <div class="project">
-          <img class="project-img" src="https://images.unsplash.com/photo-1622206699823-9687bada23a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="">
+      <div class="project">
+        <video width="320" height="240" controls autoplay>
+          <source src="https://res.cloudinary.com/dhxs9jryg/video/upload/v1651183411/portfolio/New_channel_meeting-20220428_185859-Meeting_Recording_yejgtv.mp4" type="video/mp4">
+        </video>
           <div class="project-text">
             <h2>Bus Tracker</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolore eligendi sint perspiciatis nam labore ipsum expedita, inventore quae? Cum ullam necessitatibus aliquam odit, saepe corrupti atque culpa dignissimos ab!</p>
+            Created a view of the City of Halifax using the Google Maps API, then populated the map with coordinate 
+            data from Leaflet to get the live locations of buses in my city. 
+            Each bus is indicated with an icon of a bus, and when clicked on reveals route number and direction.
           </div>
         </div>
-        <div class="project">
-          <img class="project-img"  src="https://images.unsplash.com/photo-1622206699823-9687bada23a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="">
+      <a class="project-link" href="http://www.hempfibrewholesale.com/">
+      <div class="project">
+        <video width="320" height="240" controls autoplay>
+          <source src="https://res.cloudinary.com/dhxs9jryg/video/upload/v1651182996/portfolio/Meeting_in__General_-20220428_185001-Meeting_Recording_np5exb.mp4" type="video/mp4">
+        </video>
           <div class="project-text">
             <h2>Hemp Fibre Wholesale</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolore eligendi sint perspiciatis nam labore ipsum expedita, inventore quae? Cum ullam necessitatibus aliquam odit, saepe corrupti atque culpa dignissimos ab!</p>
+            <p>Website I created for my friends personal business. Includes online shopping feature.</p>
           </div>
         </div>
-    </div>  
-    <div id="contact">
-      <div id="home-header">
-        <h1>Contact</h1>
+      </a>
+
       </div>
-    </div>  
-</main>
+
+
+  </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     <script src="/styling.js"></script>
