pushing to heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,8 +47,8 @@
 
     <div id="skills">
       <div class="container skills-header">
-        <h1>About Me</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam laborum atque qui nisi eum? Necessitatibus minima itaque corrupti deserunt dolore dignissimos? Commodi rerum aliquid illum accusamus voluptatum ullam voluptas eum!</p>
+        <h1>Skills</h1>
+        <p></p>
         <div id="skillsTable">
           <div class="skill"> <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/130px-HTML5_logo_and_wordmark.svg.png" alt="">
           </div>
@@ -58,7 +58,7 @@
           <div class="skill">
             <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png" alt="">
           </div>
-          <div class="skill"><img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png" alt="">
+          <div class="skill"><img class="skill-img"src="https://pngset.com/images/mongodb-atlas-hits-amazon-web-services-marketplace-leaf-plant-balloon-sprout-transparent-png-2110680.png" alt="">
           </div>
           <div class="skill"><img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/1200px-Node.js_logo.svg.png" alt="">
           </div>
