pushing to heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,7 +58,7 @@
           <div class="skill">
             <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png" alt="">
           </div>
-          <div class="skill"><img class="skill-img"src="https://pngset.com/images/mongodb-atlas-hits-amazon-web-services-marketplace-leaf-plant-balloon-sprout-transparent-png-2110680.png" alt="">
+          <div class="skill"><img class="skill-img"src="https://toppng.com/uploads/preview/9kib-354x415-unnamed-mongodb-logo-sv-11562860723mgempnmrq3.png" alt="">
           </div>
           <div class="skill"><img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/1200px-Node.js_logo.svg.png" alt="">
           </div>
