pushing to heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,11 +58,11 @@
           <div class="skill">
             <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png" alt="">
           </div>
-          <div class="skill"><img class="skill-img"src="https://toppng.com/uploads/preview/9kib-354x415-unnamed-mongodb-logo-sv-11562860723mgempnmrq3.png" alt="">
+          <div class="skill"><img class="skill-img"src="https://banner2.cleanpng.com/20180702/bgt/kisspng-mongodb-database-nosql-postgresql-mongo-5b39f9e3445fa6.5652746415305261792801.jpg" alt="">
           </div>
           <div class="skill"><img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/1200px-Node.js_logo.svg.png" alt="">
           </div>
-          <div class="skill"><img class="skill-img"src="https://expressjs.com/images/express-facebook-share.png" alt="">
+          <div class="skill"><img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/8/87/Sql_data_base_with_logo.png" alt="">
            </div>
 
         </div>
