--- a/public/css/app.css
+++ b/public/css/app.css
@@ -153,7 +153,7 @@ body {
 #skills {
   height: 100vh;
   width:100%;
-  padding-top: 100px;
+  padding-top: 3em;
   margin: 0px;
   background-color: rgb(146, 0, 68);
 }
@@ -180,8 +180,8 @@ body {
 }
 
 #skillsTable {
-  width: 100%;
-  height: 500px;
+  width: 50vw;
+  height: 75vh;
   /* grid method */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -191,15 +191,15 @@ body {
 }
 
 .skill {
-  height: 40%;
-  width: 30%;
+  /* height: 40%; */
+  /* width: 30%; */
   margin: auto;
 }
 
 .skill-img {
-  height: 100%;
-  width: 100%;
-  /* object-fit: cover; */
+  height: 8em;
+  width: 8em;
+  object-fit:contain;
   display: flex;
   justify-content: center;
   align-items: center;
