--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,7 +79,7 @@
             <h2>JoeyTV</h2>
             <p>JoeyTV is a platform for TV shows and movies that is geared to help parents 
               determine which shows are suitable for their children to watch. Includes CRUD 
-              functionality with a review system and search functionality.</p>
+              and search functionality</p>
           </div>
         </div>
       <div class="project">
