--- a/public/css/app.css
+++ b/public/css/app.css
@@ -221,14 +221,14 @@ body {
 
 .project-text {
   margin-top: 2em;
-  /* display: flex; */
-  /* flex-direction: column; */
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .btn {
   margin-right: 1em;
-  /* margin-top:20em; */
+  margin-bottom: 5em;
 }
 
 .btn-primary {
