--- a/views/home.ejs
+++ b/views/home.ejs
@@ -76,32 +76,38 @@
           <source src="https://res.cloudinary.com/dhxs9jryg/video/upload/v1651182522/portfolio/joeyTV_demo_n2jpar.mp4" type="video/mp4">
         </video>
           <div class="project-text">
-            <h2>JoeyTV</h2>
-            <p>JoeyTV is a platform for TV shows and movies that is geared to help parents 
-              determine which shows are suitable for their children to watch. Includes CRUD 
-              and search functionality</p>
+            <div>
+              <h2>JoeyTV</h2>
+              <p>JoeyTV is a platform for TV shows and movies that is geared to help parents 
+                determine which shows are suitable for their children to watch. Includes CRUD 
+                and search functionality</p>
+            </div>
                 <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/JoeyTV-final';">Github Repo</button>
           </div>
         </div>
       <div class="project">
         <img class="project-img" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651181705/portfolio/Screenshot_2022-04-28_183432_vqwrmi.png" alt="">
           <div class="project-text">
-            <h2>Book Library</h2>
-            <p>This is a library of books from a local API that is running on the json-server node module. 
-              Uses react functional components for each book in the database as a card, 
-              displaying information that is pulled from the db.json server.</p>
+            <div> 
+              <h2>Book Library</h2>
+              <p>This is a library of books from a local API that is running on the json-server node module. 
+                Uses react functional components for each book in the database as a card, 
+                displaying information that is pulled from the db.json server.</p>
+            </div>
                 <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/Book-library';">Github Repo</button>
           </div>
         </div>
       <div class="project">
         <img id="bus-img" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651459111/portfolio/buses_xgwxqd.png" alt="">
           <div class="project-text">
-            <h2>Bus Tracker</h2>
-            <p>
-              Created a view of the City of Halifax using the Google Maps API, then populated the map with coordinate 
-              data from Leaflet to get the live locations of buses in my city. 
-              Each bus is indicated with an icon of a bus, and when clicked on reveals route number and direction.
-            </p>
+            <div>
+              <h2>Bus Tracker</h2>
+              <p>
+                Created a view of the City of Halifax using the Google Maps API, then populated the map with coordinate 
+                data from Leaflet to get the live locations of buses in my city. 
+                Each bus is indicated with an icon of a bus, and when clicked on reveals route number and direction.
+              </p>
+            </div>
               <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/Bus-Tracker';">Github Repo</button>
           </div>
         </div>
@@ -109,14 +115,14 @@
           <img class="project-img" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651459438/portfolio/Screenshot_2022-05-01_234341.PNG_eomhlw.jpg" alt="">
           
           <div class="project-text">
-            <h2>Hemp Fibre Wholesale</h2>
-            <p>Website I created for my friends personal business. Includes online shopping feature.</p>
-            <a class="project-link" href="http://www.hempfibrewholesale.com/">
-              <button type="button" class="btn btn-warning">Live Version</button>
-            </a>
-            <a href="https://github.com/Ewan-MacLean/hempfibrewholesale">
-              <button type="button" class="btn btn-primary">Github Repo</button>
-            </a>
+            <div>
+              <h2>Hemp Fibre Wholesale</h2>
+              <p>Website I created for my friends personal business. Includes online shopping feature.</p>
+            </div>
+            <div>
+                <button type="button" class="btn btn-warning" onclick="window.location.href='http://www.hempfibrewholesale.com/';">Live Version</button>
+                <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/hempfibrewholesale';">Github Repo</button>
+            </div>
           </div>
         </div>
 
