pushing to heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,6 +81,9 @@
               <p>JoeyTV is a platform for TV shows and movies that is geared to help parents 
                 determine which shows are suitable for their children to watch. Includes CRUD 
                 and search functionality</p>
+                <p>
+                  <i> HTML, CSS, Javascript, React, Nodejs, MongoDB</i>
+                </p>
             </div>
                 <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/JoeyTV-final';">Github Repo</button>
           </div>
@@ -93,6 +96,9 @@
               <p>This is a library of books from a local API that is running on the json-server node module. 
                 Uses react functional components for each book in the database as a card, 
                 displaying information that is pulled from the db.json server.</p>
+                <p>
+                  <i> HTML, CSS, Javascript, React</i>
+                </p>
             </div>
                 <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/Book-library';">Github Repo</button>
           </div>
@@ -107,6 +113,9 @@
                 data from Leaflet to get the live locations of buses in my city. 
                 Each bus is indicated with an icon of a bus, and when clicked on reveals route number and direction.
               </p>
+              <p>
+                <i> HTML, CSS, Javascript, React, Nodejs, MongoDB</i>
+              </p>
             </div>
               <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/Bus-Tracker';">Github Repo</button>
           </div>
@@ -118,6 +127,9 @@
             <div>
               <h2>Hemp Fibre Wholesale</h2>
               <p>Website I created for my friends personal business. Includes online shopping feature.</p>
+              <p>
+                <i> HTML, CSS, Javascript</i>
+              </p>
             </div>
             <div>
                 <button type="button" class="btn btn-warning" onclick="window.location.href='http://www.hempfibrewholesale.com/';">Live Version</button>
