pushing to heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -114,7 +114,7 @@
                 Each bus is indicated with an icon of a bus, and when clicked on reveals route number and direction.
               </p>
               <p>
-                <i> HTML, CSS, Javascript, React, Nodejs, MongoDB</i>
+                <i> HTML, CSS, Javascript</i>
               </p>
             </div>
               <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/Bus-Tracker';">Github Repo</button>
