--- a/public/css/app.css
+++ b/public/css/app.css
@@ -215,7 +215,7 @@ body {
 .project {
   height:100%;
   width: 100%;
-  border: rgba(255, 255, 255, 0.68) solid 2px;
+  border-top: rgba(255, 255, 255, 0.68) solid 2px;
   background-color: rgb(2, 82, 148);
   display: flex;
   flex-direction: row;
