--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,6 +50,9 @@
         <h1>Skills</h1>
         <p></p>
         <div id="skillsTable">
+          <div class="skill">
+            <img class="skill-img"src="https://bambooengineering.io/img/technology/react-small.png" alt="">
+           </div>
           <div class="skill"> <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/130px-HTML5_logo_and_wordmark.svg.png" alt="">
           </div>
           <div class="skill">
@@ -58,12 +61,24 @@
           <div class="skill">
             <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png" alt="">
           </div>
-          <div class="skill"><img class="skill-img"src="https://banner2.cleanpng.com/20180702/bgt/kisspng-mongodb-database-nosql-postgresql-mongo-5b39f9e3445fa6.5652746415305261792801.jpg" alt="">
+          <div class="skill">
+            <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/8/87/Sql_data_base_with_logo.png" alt="">
           </div>
-          <div class="skill"><img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/1200px-Node.js_logo.svg.png" alt="">
+          <div class="skill">
+            <img class="skill-img"src="http://assets.stickpng.com/images/58481021cef1014c0b5e494b.png" alt="">
           </div>
-          <div class="skill"><img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/8/87/Sql_data_base_with_logo.png" alt="">
+          <div class="skill">
+            <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/1200px-Node.js_logo.svg.png" alt="">
+          </div>
+           <div class="skill">
+             <img class="skill-img"src="https://expressjs.com/images/express-facebook-share.png" alt="">
+            </div>
+          <div class="skill">
+            <img class="skill-img"src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="">
            </div>
+          <!-- <div class="skill">
+            <img class="skill-img"src="https://app.hyperping.io/assets/images/2082.png" alt="">
+           </div> -->
 
         </div>
       </div>
