pushing to heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,9 +50,6 @@
         <h1>Skills</h1>
         <p></p>
         <div id="skillsTable">
-          <div class="skill">
-            <img class="skill-img"src="https://bambooengineering.io/img/technology/react-small.png" alt="">
-           </div>
           <div class="skill"> <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/130px-HTML5_logo_and_wordmark.svg.png" alt="">
           </div>
           <div class="skill">
@@ -62,10 +59,13 @@
             <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png" alt="">
           </div>
           <div class="skill">
+            <img class="skill-img"src="https://bambooengineering.io/img/technology/react-small.png" alt="">
+           </div>
+          <div class="skill">
             <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/8/87/Sql_data_base_with_logo.png" alt="">
           </div>
           <div class="skill">
-            <img class="skill-img"src="http://assets.stickpng.com/images/58481021cef1014c0b5e494b.png" alt="">
+            <img class="skill-img"src="https://www.seekpng.com/png/detail/383-3838904_mongodb-logo.png" alt="">
           </div>
           <div class="skill">
             <img class="skill-img"src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/1200px-Node.js_logo.svg.png" alt="">
