--- a/public/css/app.css
+++ b/public/css/app.css
@@ -298,10 +298,16 @@ video {
   padding: 0px;
   margin: 0px;
   display:flex;
-  background-color: rgb(52, 28, 207);
+  background-color: rgb(207, 73, 28);
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
+}
+
+#contact > h1 {
+  color:rgba(255, 255, 255, 0.773);
+  margin-left: 2em;
+  margin-top: 2em;
 }
 
 @media only screen and   (max-width: 1200px){
