--- a/views/home.ejs
+++ b/views/home.ejs
@@ -152,6 +152,10 @@
 
       </div>
 
+      <div id="contact">
+        <h1>Contact</h1>
+      </div>
+
 
   </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
