pushing to heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -100,7 +100,7 @@
                 <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/JoeyTV-final';">Github Repo</button>
           </div>
         </div>
-      <div class="project">
+      <!-- <div class="project">
         <img class="project-img" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651181705/portfolio/Screenshot_2022-04-28_183432_vqwrmi.png" alt="">
           <div class="project-text">
             <div> 
@@ -114,7 +114,7 @@
             </div>
                 <button type="button" class="btn btn-primary" onclick="window.location.href='https://github.com/Ewan-MacLean/Book-library';">Github Repo</button>
           </div>
-        </div>
+        </div> -->
       <div class="project">
         <img id="bus-img" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651459111/portfolio/buses_xgwxqd.png" alt="">
           <div class="project-text">
