--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,6 +42,7 @@
       <div id="home-header">
         <h1 id="home-h1">Ewan MacLean</h1>
         <h2 id="home-h2">Web Developer</h2>
+        <img id="home-github" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651513065/portfolio/GitHub-Mark-Light-64px_seffwa.png" alt="">
       </div>
     </div>
 
