--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,9 @@
       <div id="home-header">
         <h1 id="home-h1">Ewan MacLean</h1>
         <h2 id="home-h2">Web Developer</h2>
-        <img id="home-github" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651513065/portfolio/GitHub-Mark-Light-64px_seffwa.png" alt="">
+        <a href="https://github.com/Ewan-MacLean">
+          <img id="home-github" src="https://res.cloudinary.com/dhxs9jryg/image/upload/v1651513065/portfolio/GitHub-Mark-Light-64px_seffwa.png" alt="">
+        </a>
       </div>
     </div>
 
