--- a/public/css/app.css
+++ b/public/css/app.css
@@ -358,12 +358,14 @@ video {
 
   #skillsTable {
     flex-wrap: wrap;
+    height: fit-content;
     width: 85vw;
     margin-left:-2em;
   }
 
   .skill {
     width: 50%;
+    margin: 0;
     padding-top:0.4em;
   }
 
